--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,11 +20,11 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@owlmeans/regov-ssi-common": "^0.1.0",
+    "@owlmeans/regov-ssi-core": "^0.1.0",
+    "@owlmeans/regov-ssi-did": "^0.1.0",
     "@reduxjs/toolkit": "^1.6.1",
     "file-saver": "^2.0.5",
-    "metabelarusid-common": "^0.0.1",
-    "metabelarusid-core": "^0.0.1",
-    "metabelarusid-did": "^0.0.1",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
@@ -46,6 +46,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
     "dotenv": "^10.0.0",
+    "env-cmd": "^10.1.0",
     "jest-watch-typeahead": "^0.6.4",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5"
