--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,10 +20,11 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
-    "@owlmeans/regov-ssi-capability": "^0.1.1",
     "@owlmeans/regov-ssi-agent": "^0.1.0",
+    "@owlmeans/regov-ssi-capability": "^0.1.1",
     "@owlmeans/regov-ssi-core": "^0.4.0",
     "@reduxjs/toolkit": "^1.6.1",
+    "@types/node": "^16.6.1",
     "file-saver": "^2.0.5",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
